# app-templates

./: .gitattributes  .gitignore  Contributing.md  FEEDBACK_IMPLEMENTATION_SUMMARY.md  HANDOFF_PROMPT.md  LICENSE  Makefile  NOTICE  PR_DESCRIPTION.md  README.md  WORKSPACE_ARCHITECTURE.md  app.py  codereview.md  otel-private-preview-old.md  otel-public-preview.md  setup.cfg  setup.py  test-requirements.txt
agent-claude-sdk-advanced/: .env.example  .mcp.json  AGENTS.md  README.md  databricks.yml  pyproject.toml
agent-claude-sdk-advanced/.ai-dev-kit/: .installed-skills
agent-claude-sdk-advanced/.claude/: settings.json
agent-claude-sdk-advanced/.codex/: config.toml
agent-claude-sdk-advanced/agent_server/: agent.py  settings.py  start_server.py
agent-claude-sdk-advanced/scripts/: preflight.py  quickstart.py  start_app.py
agent-langgraph/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.yaml  databricks.yml  manifest.yaml  pyproject.toml
agent-langgraph-advanced/: .env.example  .gitignore  AGENTS.md  README.md  app.yaml  databricks.yml  manifest.yaml  pyproject.toml
agent-langgraph-advanced/agent_server/: agent.py  prompts.py  start_server.py  utils.py  utils_memory.py
agent-langgraph-advanced/scripts/: conftest.py  grant_lakebase_permissions.py  quickstart.py
agent-langgraph-long-term-memory/: .env.example  .gitignore  AGENTS.md  README.md  app.yaml  databricks.yml  pyproject.toml
agent-langgraph-long-term-memory/agent_server/: agent.py  evaluate_agent.py  start_server.py  utils.py  utils_agent_memory.py  utils_memory.py
agent-langgraph-long-term-memory/scripts/: grant_lakebase_permissions.py  quickstart.py  quickstart.sh  start_app.py
agent-langgraph-short-term-memory/: .env.example  .gitignore  AGENTS.md  README.md  app.yaml  databricks.yml  pyproject.toml
agent-langgraph-short-term-memory/agent_server/: agent.py  start_server.py  utils.py
agent-langgraph-short-term-memory/scripts/: grant_lakebase_permissions.py  preflight.py  quickstart.py  quickstart.sh  start-app.sh
agent-langgraph/agent_server/: agent.py  evaluate_agent.py  start_server.py  utils.py
agent-langgraph/scripts/: quickstart.py  quickstart.sh  start_app.py
agent-load-testing/mock-agent-app/: app.yaml  databricks.yml  pyproject.toml
agent-migration-from-model-serving/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  databricks.yml  manifest.yaml  pyproject.toml
agent-migration-from-model-serving/agent_server/: agent.py  evaluate_agent.py  start_server.py  utils.py
agent-migration-from-model-serving/scripts/: grant_lakebase_permissions.py  quickstart.py  start_app.py
agent-openai-advanced/: .env.example  .gitignore  AGENTS.md  README.md  app.yaml  background_stream_output.txt  databricks.yml  manifest.yaml  pyproject.toml
agent-openai-advanced/agent_server/: agent.py  evaluate_agent.py  memory_utils.py  start_server.py  utils.py
agent-openai-advanced/scripts/: grant_lakebase_permissions.py  preflight.py  quickstart.py  start_app.py  test_long_running_agent.py
agent-openai-agents-sdk/: .env.example  .gitignore  AGENTS.md  CHANGES_SUMMARY.md  README.md  TESTING.md  app.yaml  databricks.yml  iterate_template_docs.py  manifest.yaml  mlflow.db  pyproject.toml  requirements.txt  start.sh  test_template_workflow.py  workflow_test_report.json
agent-openai-agents-sdk-long-running-agent/: .env.example  .gitignore  AGENTS.md  README.md  databricks.yml  pyproject.toml
agent-openai-agents-sdk-long-running-agent/agent_server/: agent.py  long_running_server.py  settings.py  start_server.py  utils.py  utils_lakebase.py
agent-openai-agents-sdk-long-running-agent/scripts/: demo_long_running_agent.py  discover_tools.py  grant_lakebase_permissions.py  preflight.py  quickstart.py  start_app.py  test_long_running_agent.py
agent-openai-agents-sdk-multiagent/: .env.example  .gitignore  AGENTS.md  README.md  databricks.yml  manifest.yaml  pyproject.toml  requirements.txt
agent-openai-agents-sdk-multiagent/agent_server/: a2a_wrapper.py  agent.py  evaluate_agent.py  start_server.py  utils.py
agent-openai-agents-sdk-multiagent/e2e-chatbot-app-next/: package-lock.json  playwright.config.ts  tsconfig.json
agent-openai-agents-sdk-multiagent/scripts/: grant_lakebase_permissions.py  quickstart.py  setup_cli_windows.bat  start_app.py
agent-openai-agents-sdk-short-term-memory/: .env.example  .gitignore  AGENTS.md  README.md  app.yaml  databricks.yml  pyproject.toml
agent-openai-agents-sdk-short-term-memory/agent_server/: agent.py  utils.py
agent-openai-agents-sdk-short-term-memory/scripts/: grant_lakebase_permissions.py  preflight.py  quickstart.py
agent-openai-agents-sdk-stateful-memory/: app.yaml  databricks.yml  pyproject.toml
agent-openai-agents-sdk-stateful-memory/agent_server/: agent.py  utils.py
agent-openai-agents-sdk/agent_server/: agent.py  app.py  start_server.py  utils.py  utils_memory.py
agent-openai-agents-sdk/e2e-chatbot-app-next/: .gitignore  package-lock.json  package.json  playwright.config.ts
agent-openai-agents-sdk/scripts/: discover_tools.py  grant_lakebase_permissions.py  quickstart.py  quickstart.sh  start_app.py  telemetry.py
agents/langgraph-responses-api-agent/: pyproject.toml
django-on-databricks-apps/django-postgres-app/: pyproject.toml
django-postgres-app/: README.md  app.yaml  databricks.yml  entrypoint.sh  pyproject.toml  utils.py
django-postgres-app/config/: asgi.py  auth.py  settings.py  urls.py  wsgi.py
django-postgres-app/lakebase/: base.py
django-postgres-app/todos/: forms.py  models.py  urls.py  views.py
mcp-server-hello-world/: Claude.md  README.md  app.yaml  manifest.yaml  pyproject.toml
mcp-server-hello-world/server/: app.py  (+3 more)
mcp-server-open-api-spec/: CLAUDE.MD  README.md  app.yaml  manifest.yaml  pyproject.toml  requirements.txt
mse-to-app-migration/: .gitignore  AGENTS.md  CLAUDE.md  README.md  migration-requirements.txt  pyproject.toml
non-conversational-agent/: README.md  app.yaml  pyproject.toml  test_agent.py
openai-agents-sdk/: .env.example  README.md  app.yaml  pyproject.toml  ui
(+2272 files in other folders)
