[project]
name = "agent-server"
version = "0.1.0"
description = "MLflow-compatible agent server with FastAPI"
readme = "README.md"
authors = [
    { name = "Agent Developer", email = "developer@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "databricks-langchain>=0.17.0",
    "databricks-openai",
    "databricks-ai-bridge",
    "databricks-agents>=1.9.3",
    "mlflow>=3.10.0",
    "langgraph>=1.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv>=1.2.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "pytest>=9.0.2",
]

setup = [
    "ruamel.yaml>=0.18.0",
]

[tool.uv]
default-groups = ["dev", "setup"]

# TEMPORARY: pin databricks-ai-bridge and its integrations to the fix branch for
# https://github.com/databricks/databricks-ai-bridge/pull/435 while the fix is
# unreleased. Remove these once a databricks-ai-bridge release containing the
# VectorSearchIndex import fix is published to PyPI.
[tool.uv.sources]
databricks-ai-bridge = { git = "https://github.com/databricks/databricks-ai-bridge.git", branch = "jennsun/fix-vector-search-index-import" }
databricks-openai = { git = "https://github.com/databricks/databricks-ai-bridge.git", branch = "jennsun/fix-vector-search-index-import", subdirectory = "integrations/openai" }
databricks-langchain = { git = "https://github.com/databricks/databricks-ai-bridge.git", branch = "jennsun/fix-vector-search-index-import", subdirectory = "integrations/langchain" }


[project.scripts]
quickstart = "scripts.quickstart:main"
start-app = "scripts.start_app:main"
start-server = "agent_server.start_server:main"
agent-evaluate = "agent_server.evaluate_agent:evaluate"
discover-tools = "scripts.discover_tools:main"
preflight = "scripts.preflight:main"
