[project]
name = "django-postgres-app"
version = "0.1.0"
description = "Django app on Databricks Apps with Lakebase Autoscaling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.81.0",
    "django>=5.2",
    "psycopg[binary]>=3.1.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.12.0",
]
