[project]
name = "mock-agent-server"
version = "0.1.0"
description = "Mock agent for load testing Databricks Apps throughput"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "mlflow>=3.10.0",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
    "openai-agents>=0.0.16",
    "openai>=1.76.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_server"]

[project.scripts]
start-server = "agent_server.start_server:main"
